# ComfyUI-oshtz-nodes

./: .gitignore  LICENSE.txt  README.md  __init__.py  pyproject.toml  requirements.txt  utils.py
examples/: prompt_enhancer.txt
nodes/: aspect_ratio.py  gpt_image_1.py  image_overlay.py  llm_aio.py  lora_switcher.py  lora_switcher_20.py  lora_switcher_40.py  lora_switcher_dynamic.py  string_splitter.py
web/: index.js
web/css/: oshtz-nodes.css
web/js/: lora_switcher.js
