# pyproject.toml
[project]
name = "comfyui-oshtz-nodes"
description = "Custom ComfyUI nodes including LLM integration, LoRA switchers, image tools, and more"
version = "1.0.0"
license = { file = "LICENSE.txt" }
dependencies = [
    "requests",
    "torch",
    "pydantic",
    "Pillow",
    "boto3>=1.34.101"
]

[project.urls]
Repository = "https://github.com/oshtz/ComfyUI-oshtz-nodes"

[tool.comfy]
PublisherId = "oshtz"
DisplayName = "oshtz Nodes"
Icon = "https://raw.githubusercontent.com/oshtz/ComfyUI-oshtz-nodes/main/examples/prompt_enhancer.jpg"
