# pyproject.toml
[project]
name = "comfyui-oshtz-nodes"
description = "Custom ComfyUI nodes including LLM integration, GPT Image 1, LoRA switchers, aspect ratio helper, image tools, and more"
version = "1.1.1"
license = { file = "LICENSE.txt" }
dependencies = [
    "requests",
    "torch",
    "pydantic",
    "Pillow",
    "boto3>=1.34.101"
]

[project.urls]
Repository = "https://github.com/oshtz/ComfyUI-oshtz-nodes"

[tool.comfy]
PublisherId = "oshtz"
DisplayName = "oshtz Nodes"
Icon = "https://github.com/oshtz.png"
